--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/blog.css">
-    <!-- Ionicons link -->
+<!-- Ionicons link -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </head>
@@ -61,11 +61,11 @@
                 <img class="images" src="Images/hero-mocup1.png" alt="">
             </div>
         </div>
-        <!-- aro kaj baki -->
+<!-- aro kaj  uc   baki -->
     </header>
-    <!-- main -->
+<!-- main -->
     <main>
-        <!-- section 1 -->
+<!-- section 1 -->
         <section class="section-1">
             <div class="section-1-div">
                 <div class="section-h1">
@@ -84,8 +84,24 @@
                     </div>
                 </div>
             </div>
+             
         </section>
-
+<!-- section-2 -->
+       <section>
+            <div class="section-2">
+                 <div class="section-2-div-1">
+                    <div class="section-2-div-2">
+                        <img src="Images/card1.png" alt="">
+                    </div>
+                    <div class="section-2-div-3">
+                        <h1>Easily monitor all financial activities</h1>
+                        <p class="class">Users can input their income & expenses, categorize transactions, and view reports and summaries of their spending habits.</p>
+                        <p><span>Budgeting:</span> It enables effective budgeting and expense tracking, helping you stay on top of your financial goals.</p>
+                        <p><span>Expense Tracking:</span> Users can input their income & expenses, categorize transactions, and view reports and summaries of their spending habits.</p>
+                    </div>
+                 </div>
+            </div>
+       </section>
     </main>
     <footer>
         
