--- a/index.html
+++ b/index.html
@@ -102,6 +102,20 @@
                  </div>
             </div>
        </section>
+       <!-- section-3 -->
+        <section>
+            <div class="section-3">
+                <div>
+                    <div>
+                        <h1></h1>
+                    </div>
+
+                    <div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
