fints the section 3

--- a/index.html
+++ b/index.html
@@ -105,13 +105,23 @@
        <!-- section-3 -->
         <section>
             <div class="section-3">
-                <div>
-                    <div>
-                        <h1></h1>
+                <div class="section-3-div-1">
+                    <div class="section-3-div-2">
+                        <h1>Bank account & credit card linked</h1>
+                        <p>Easily link their bank accounts & credit cards to view account balances,  monitor transactions and receive alerts for unusual activity.</p>
+                        <!-- card-1 -->
+                        <div class="section-3-card">
+                            <h2><ion-icon style="color: chartreuse;" name="card"></ion-icon></span>&nbsp; &nbsp; &nbsp;  saving & Goal Setting</h1>
+                            <p>Easily set money aside and build your savings for <br> the future plan and track your financial goals.</p>
+                        </div>
+                        <!-- card-2 -->
+                        <div class="section-3-card">
+                            <h2><ion-icon style="color: chartreuse;" name="card"></ion-icon></span>&nbsp; &nbsp; &nbsp;  Credit Score Monitoring</h1>
+                            <p>Our finance app provides credit score monitoring <br> to help users monitor their credit health.</p>
+                        </div>
                     </div>
-
-                    <div>
-
+                    <div class="section-3-div-3">
+                        <img src="Images/card2 (1).png" alt="">
                     </div>
                 </div>
             </div>
