finis the section 4

--- a/index.html
+++ b/index.html
@@ -126,6 +126,48 @@
                 </div>
             </div>
         </section>
+        <!-- section-4 -->
+         <section class="section-4">
+            <div class="section-4-div">
+                <h1>Features to improve <br> your financial life</h1>
+            </div>
+<!-- start the main section -->
+            <div class="section-4-div-1">
+                <div class="section-4-card-1">
+                    <div><ion-icon name="bulb"></ion-icon></div>
+                    <h1>Financial Planning</h1>
+                    <p>Users easily can create & track all types budgets, set financial goals, and plan for their future.</p>
+                </div>
+                <div class="section-4-card-1">
+                    <div><ion-icon name="finger-print"></ion-icon></div>
+                    <h1>Security Features</h1>
+                    <p>Users easily can create & track all types budgets, set financial goals, and plan for their future.</p>
+                </div>
+                <div class="section-4-card-1">
+                    <div><ion-icon name="document-text"></ion-icon></div>
+                    <h1>Tex preparation</h1>
+                    <p>Users easily can create & track all types budgets, set financial goals, and plan for their future.</p>
+                </div>
+            </div>
+            <div class="section-4-div-1">
+                <div class="section-4-card-1">
+                    <div><ion-icon name="stats-chart"></ion-icon></div>
+                    <h1>Offline Access</h1>
+                    <p>Users easily can create & track all types budgets, set financial goals, and plan for their future.</p>
+                </div>
+                <div class="section-4-card-1">
+                    <div><ion-icon name="reload"></ion-icon></div>
+                    <h1>Currency <br> conversion </h1>
+                    <p>Users easily can create & track all types budgets, set financial goals, and plan for their future.</p>
+                </div>
+                <div class="section-4-card-1">
+                    <div><ion-icon name="link"></ion-icon></div>
+                    <h1>Integration Support</h1>
+                    <p>Users easily can create & track all types budgets, set financial goals, and plan for their future.</p>
+                </div>
+            </div>
+            
+         </section>
     </main>
     <footer>
         
