--- a/index.html
+++ b/index.html
@@ -168,6 +168,31 @@
             </div>
             
          </section>
+         <!-- section 5 -->
+         <section >
+            <div class="section-2">
+                <div class="section-2-div-1">
+                   <div class="section-2-div-2">
+                       <img src="Images/card1.png" alt="">
+                   </div>
+                   <div class="section-2-div-3">
+                       <h1>Easily monitor all financial activities</h1>
+                       <p class="class">Users can input their income & expenses, categorize transactions, and view reports and summaries of their spending habits.</p>
+                       <p><span>Budgeting:</span> It enables effective budgeting and expense tracking, helping you stay on top of your financial goals.</p>
+                       <p><span>Expense Tracking:</span> Users can input their income & expenses, categorize transactions, and view reports and summaries of their spending habits.</p>
+                       <div class="button-div">
+                        <button class="button">Start Your Free Trial</button>
+                       </div>
+                   </div>
+                </div>
+           </div>
+         </section>
+         <!-- section-6 -->
+          <section class="section-6">
+            <div class="section-6-div">
+                <h1>We've earned a 4.8- <br> star  Trustpilot rating</h1>
+            </div>
+          </section>
     </main>
     <footer>
         
