finis the section 6

--- a/index.html
+++ b/index.html
@@ -187,12 +187,114 @@
                 </div>
            </div>
          </section>
-         <!-- section-6 -->
+<!-- section-6 -->
           <section class="section-6">
             <div class="section-6-div">
                 <h1>We've earned a 4.8- <br> star  Trustpilot rating</h1>
             </div>
+<!--section-6-div end  -->
+            <div class="section-6-div-1">
+                <!-- card 1 -->
+                <div class="section-6-div-2">
+                    <div class="section-6-div-3">
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <h1>Best finance budgeting app ever!</h1>
+                        <p>"This finance app has been a game-changer for me! It's made budgeting and tracking my expenses so much easier. I love how intuitive and user-friendly it is."</p>
+                        <div class="section-6-div-6">
+                            <div class="section-6-div-4">
+                                <img src="Images/t_user1.png" alt="">
+                            </div>
+                            <div class="section-6-div-5">
+                                <h4>William Kolas</h4>
+                                <p class="p">Student</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class="section-6-div-2">
+                    <div class="section-6-div-3">
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <h1>Best finance budgeting app ever!</h1>
+                        <p>"This finance app has been a game-changer for me! It's made budgeting and tracking my expenses so much easier. I love how intuitive and user-friendly it is."</p>
+                        <div class="section-6-div-6">
+                            <div class="section-6-div-4">
+                                <img src="Images/t_user1.png" alt="">
+                            </div>
+                            <div class="section-6-div-5">
+                                <h4>William Kolas</h4>
+                                <p class="p">Student</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-6-div-1">
+                <!-- card 1 -->
+                <div class="section-6-div-2">
+                    <div class="section-6-div-3">
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <h1>Best finance budgeting app ever!</h1>
+                        <p>"This finance app has been a game-changer for me! It's made budgeting and tracking my expenses so much easier. I love how intuitive and user-friendly it is."</p>
+                        <div class="section-6-div-6">
+                            <div class="section-6-div-4">
+                                <img src="Images/t_user1.png" alt="">
+                            </div>
+                            <div class="section-6-div-5">
+                                <h4>William Kolas</h4>
+                                <p class="p">Student</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class="section-6-div-2">
+                    <div class="section-6-div-3">
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <h1>Best finance budgeting app ever!</h1>
+                        <p>"This finance app has been a game-changer for me! It's made budgeting and tracking my expenses so much easier. I love how intuitive and user-friendly it is."</p>
+                        <div class="section-6-div-6">
+                            <div class="section-6-div-4">
+                                <img src="Images/t_user1.png" alt="">
+                            </div>
+                            <div class="section-6-div-5">
+                                <h4>William Kolas</h4>
+                                <p class="p">Student</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
           </section>
+          <!-- section-7 -->
+           <section class="section-7">
+           <div class="section-7-div">
+            <div class="section-7-div-1">
+                <div class="section-7-div-2">
+
+                </div>
+                <div class="section-7-div-3">
+
+                </div>
+            </div>
+        </div>
+           </section>
     </main>
     <footer>
         
