amr snonr abafdfladjsfD

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <button>Start Your Free Trial</button>
             </div>
             <div class="header-button-2">
-                <button> <ion-icon class="icon" name="caret-forward-circle"></ion-icon> watch A Demo</button>
+                <button> <ion-icon class="icon-1" name="caret-forward-circle"></ion-icon> watch A Demo</button>
             </div>
         </div>
 
@@ -223,7 +223,51 @@
                         <ion-icon class="icon" class="icon" name="star"></ion-icon>
                         <ion-icon class="icon" name="star"></ion-icon>
                         <ion-icon class="icon" name="star"></ion-icon>
-                        <h1>Best finance budgeting app ever!</h1>
+                        <h1>super helpful to watch my spend</h1>
+                        <p>"This finance app has been a game-changer for me! It's made budgeting and tracking my expenses so much easier. I love how intuitive and user-friendly it is."</p>
+                        <div class="section-6-div-6">
+                            <div class="section-6-div-4">
+                                <img src="Images/t_user2.png" alt="">
+                            </div>
+                            <div class="section-6-div-5">
+                                <h4>William Kolas</h4>
+                                <p class="p">Student</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="section-6-div-1">
+                <!-- card 3 -->
+                <div class="section-6-div-2">
+                    <div class="section-6-div-3">
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <h1>Great app that saves money </h1>
+                        <p>"This finance app has been a game-changer for me! It's made budgeting and tracking my expenses so much easier. I love how intuitive and user-friendly it is."</p>
+                        <div class="section-6-div-6">
+                            <div class="section-6-div-4">
+                                <img src="Images/t_user3.png" alt="">
+                            </div>
+                            <div class="section-6-div-5">
+                                <h4>William Kolas</h4>
+                                <p class="p">Student</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-4 -->
+                <div class="section-6-div-2">
+                    <div class="section-6-div-3">
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <ion-icon class="icon" name="star"></ion-icon>
+                        <h1>Seriously Life changing app !</h1>
                         <p>"This finance app has been a game-changer for me! It's made budgeting and tracking my expenses so much easier. I love how intuitive and user-friendly it is."</p>
                         <div class="section-6-div-6">
                             <div class="section-6-div-4">
@@ -237,49 +281,9 @@
                     </div>
                 </div>
             </div>
-            <div class="section-6-div-1">
-                <!-- card 1 -->
-                <div class="section-6-div-2">
-                    <div class="section-6-div-3">
-                        <ion-icon class="icon" name="star"></ion-icon>
-                        <ion-icon class="icon" name="star"></ion-icon>
-                        <ion-icon class="icon" class="icon" name="star"></ion-icon>
-                        <ion-icon class="icon" name="star"></ion-icon>
-                        <ion-icon class="icon" name="star"></ion-icon>
-                        <h1>Best finance budgeting app ever!</h1>
-                        <p>"This finance app has been a game-changer for me! It's made budgeting and tracking my expenses so much easier. I love how intuitive and user-friendly it is."</p>
-                        <div class="section-6-div-6">
-                            <div class="section-6-div-4">
-                                <img src="Images/t_user1.png" alt="">
-                            </div>
-                            <div class="section-6-div-5">
-                                <h4>William Kolas</h4>
-                                <p class="p">Student</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- card-2 -->
-                <div class="section-6-div-2">
-                    <div class="section-6-div-3">
-                        <ion-icon class="icon" name="star"></ion-icon>
-                        <ion-icon class="icon" name="star"></ion-icon>
-                        <ion-icon class="icon" class="icon" name="star"></ion-icon>
-                        <ion-icon class="icon" name="star"></ion-icon>
-                        <ion-icon class="icon" name="star"></ion-icon>
-                        <h1>Best finance budgeting app ever!</h1>
-                        <p>"This finance app has been a game-changer for me! It's made budgeting and tracking my expenses so much easier. I love how intuitive and user-friendly it is."</p>
-                        <div class="section-6-div-6">
-                            <div class="section-6-div-4">
-                                <img src="Images/t_user1.png" alt="">
-                            </div>
-                            <div class="section-6-div-5">
-                                <h4>William Kolas</h4>
-                                <p class="p">Student</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+            <div class="section-6-button">
+                <button class="button">View All Reviews</button>
             </div>
           </section>
           <!-- section-7 -->
