amar sona r bangl ami tomy balo basi

--- a/index.html
+++ b/index.html
@@ -291,10 +291,45 @@
            <div class="section-7-div">
             <div class="section-7-div-1">
                 <div class="section-7-div-2">
-
+                    <h1>Browse our latest <br> news and articles</h1>
                 </div>
                 <div class="section-7-div-3">
-
+                    <!-- card-1 -->
+                     <div class="section-7-card">
+                        <div class="section-7-card-1">
+                            <img src="Images/blog5.png" alt="">
+                            <div class="section-7-card-1-button"><button>Business</button></div>
+                        </div>
+                        <div class="section-7-card-2">
+                            <p>December 4, 2023</p>
+                            <h1>what is a good solution <br> for finance...</h1>
+                            <ion-icon class="section-7-icon" name="arrow-forward"></ion-icon>
+                        </div>
+                     </div>
+                     <!-- card-2 -->
+                     <div class="section-7-card">
+                        <div class="section-7-card-1">
+                            <img src="Images/blog5.png" alt="">
+                            <div class="section-7-card-1-button"><button>Business</button></div>
+                        </div>
+                        <div class="section-7-card-2">
+                            <p>December 4, 2023</p>
+                            <h1>what is a good solution <br> for finance...</h1>
+                            <ion-icon class="section-7-icon" name="arrow-forward"></ion-icon>
+                        </div>
+                     </div>
+                     <!-- card-3 -->
+                     <div class="section-7-card">
+                        <div class="section-7-card-1">
+                            <img src="Images/blog5.png" alt="">
+                            <div class="section-7-card-1-button"><button>Business</button></div>
+                        </div>
+                        <div class="section-7-card-2">
+                            <p>December 4, 2023</p>
+                            <h1>what is a good solution <br> for finance...</h1>
+                            <ion-icon class="section-7-icon" name="arrow-forward"></ion-icon>
+                        </div>
+                     </div>
                 </div>
             </div>
         </div>
