fints the section 7

--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                 </div>
                 <div class="section-7-div-3">
                     <!-- card-1 -->
+                     <div class="section-7-card-3">
                      <div class="section-7-card">
                         <div class="section-7-card-1">
                             <img src="Images/blog5.png" alt="">
@@ -306,10 +307,12 @@
                             <ion-icon class="section-7-icon" name="arrow-forward"></ion-icon>
                         </div>
                      </div>
+                    </div>
                      <!-- card-2 -->
+                      <div class="section-7-card-3">
                      <div class="section-7-card">
                         <div class="section-7-card-1">
-                            <img src="Images/blog5.png" alt="">
+                            <img src="Images/blog4.png" alt="">
                             <div class="section-7-card-1-button"><button>Business</button></div>
                         </div>
                         <div class="section-7-card-2">
@@ -318,10 +321,12 @@
                             <ion-icon class="section-7-icon" name="arrow-forward"></ion-icon>
                         </div>
                      </div>
+                    </div>
                      <!-- card-3 -->
+                      <div class="section-7-card-3">
                      <div class="section-7-card">
                         <div class="section-7-card-1">
-                            <img src="Images/blog5.png" alt="">
+                            <img src="Images/blog6.png" alt="">
                             <div class="section-7-card-1-button"><button>Business</button></div>
                         </div>
                         <div class="section-7-card-2">
@@ -330,6 +335,7 @@
                             <ion-icon class="section-7-icon" name="arrow-forward"></ion-icon>
                         </div>
                      </div>
+                    </div>
                 </div>
             </div>
         </div>
