--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                      <div class="section-7-card">
                         <div class="section-7-card-1">
                             <img src="Images/blog4.png" alt="">
-                            <div class="section-7-card-1-button"><button>Business</button></div>
+                            <div class="section-7-card-1-button"><button>Technology</button></div>
                         </div>
                         <div class="section-7-card-2">
                             <p>December 4, 2023</p>
@@ -327,7 +327,7 @@
                      <div class="section-7-card">
                         <div class="section-7-card-1">
                             <img src="Images/blog6.png" alt="">
-                            <div class="section-7-card-1-button"><button>Business</button></div>
+                            <div class="section-7-card-1-button"><button>Management</button></div>
                         </div>
                         <div class="section-7-card-2">
                             <p>December 4, 2023</p>
@@ -340,6 +340,34 @@
             </div>
         </div>
            </section>
+           <!-- section-8 -->
+            <section class="section-8">
+                <div class="section-8-div">
+                    <div class="section-8-div-1">
+                        <div class="section-8-div-3">
+                            <img src="Images/cta-mocup.png" alt="">
+                        </div>
+                        <div class="section-8-div-4">
+                            <div class="section-8-div-5">
+                                <h1>Start managing <br> your money now !</h1>
+                                <p>l future is just a download away. Get our app and <br> experience the benefits of better money management.</p>
+                            </div>
+                            <div class="section-8-div-6">
+                                <div class="section-8-img-1">
+                                    <img src="Images/play-store.png" alt="">
+                                </div>
+                                <div class="section-8-img-1">
+                                    <img src="Images/app-store.png" alt="">
+                                </div>
+                                <div class="section-8-images">
+                                    <img src="Images/shape2.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+           
+            </section>
     </main>
     <footer>
         
