--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                     <img src="Images/app-store.png" alt="">
                                 </div>
                                 <div class="section-8-images">
-                                    <img src="Images/shape2.png" alt="">
+                                    <img class="transform" src="Images/shape2.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -369,8 +369,26 @@
            
             </section>
     </main>
-    <footer>
-        
+    <footer class="footer">
+        <div class="footer-div-1">
+            <div class="footer-div-2">
+
+            </div>
+
+        </div>
+        <hr>
+        <div class="last-footer">
+            <div class="last-footer-1">
+                <h5>© Copyright 2024, All Rights Reserved by Mthemeus</h5>
+            </div>
+            <div class="last-footer-2">
+                <div><ion-icon name="logo-twitter"></ion-icon></div>
+                <div><ion-icon name="logo-facebook"></ion-icon></div>
+                <div><ion-icon name="logo-linkedin"></ion-icon></div>
+                <div><ion-icon name="logo-github"></ion-icon></div>
+                <div><ion-icon name="logo-youtube"></ion-icon></div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
